# async-iter-ext

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  hook.sh  release.toml
.github/worflows/: coverage.yml
.github/workflows/: ci.yml  coverage.yml  fmt.yml
src/: combinator.rs  filter.rs  iter.rs  lib.rs  map.rs  option.rs  result.rs
src/combinator/: filter.rs  map.rs
src/iter/: process_result.rs  sync_iter.rs
tests/: iter_filter_async.rs  iter_for_each_async.rs  iter_map_async.rs  option_async.rs  process_results.rs  result_async.rs
